[Feat]: Add Comments and Update Readme.md File

--- a/Email_Spam_Checker_Bayes_Decision.ipynb
+++ b/Email_Spam_Checker_Bayes_Decision.ipynb
@@ -38962,65 +38962,69 @@
    "source": [
     "### **Evaluating the Spam Detection Algorithm**\n",
     "\n",
-    "This block of code evaluates the performance of the spam detection algorithm on the entire dataset. It calculates the posterior probabilities for each email, comparing the probabilities for spam and non-spam classes to classify the message.\n",
-    "\n",
-    "#### **Steps:**\n",
-    "1. **Calculate Posterior Probabilities**: For each email message, we compute the posterior probabilities for both spam and non-spam classes using the words in the message and the prior probabilities of spam and non-spam.\n",
-    "2. **Classify the Message**: The message is classified as \"spam\" if the posterior probability for spam exceeds that for non-spam. Otherwise, it is classified as \"ham\".\n",
-    "3. **Evaluate Accuracy**: The prediction is compared with the actual label to determine if the classification is correct. The total number of correct predictions is then counted.\n",
-    "\n",
-    "#### **Outcome**:\n",
-    "- The total number of messages processed and the number of correct predictions are displayed.\n",
-    "- The accuracy of the model is calculated as the ratio of correct predictions to the total number of messages.\n",
-    "\n",
-    "By running this code, we can assess the accuracy of the algorithm and evaluate its ability to correctly classify email messages as spam or ham.\n"
+    "This block of code evaluates the performance of the spam detection algorithm on the entire dataset. It calculates the posterior probabilities for each email, comparing the probabilities for spam and non-spam classes to classify the message.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Confusion Matrix:\n",
+      " [[ 705   42]\n",
+      " [ 103 4722]]\n",
       "Total messages: 5572\n",
-      "Correct predictions: 5427\n",
-      "Accuracy: 0.9739770279971285\n"
+      "Accuracy: 0.9739770279971285\n",
+      "Precision: 0.8725247524752475\n",
+      "Recall: 0.9437751004016064\n",
+      "F1-Score: 0.9067524115755627\n"
      ]
     }
    ],
    "source": [
-    "#Let me evaluate it on the entire dataset\n",
-    "# Calculate the posterior probabilities for all messages in the dataset\n",
-    "correct_predictions = 0\n",
+    "from sklearn.metrics import precision_score, recall_score, f1_score, confusion_matrix\n",
     "\n",
-    "# Loop through each message and label in the dataset\n",
-    "for message,label in zip(df['Email_Messages'],df['Label']):\n",
-    "    # Calculate the posterior probabilities\n",
+    "# Initialize variables for predictions and actual labels\n",
+    "predictions = []  # This will hold the predicted labels (spam/ham)\n",
+    "actual_labels = df['Label']  # This holds the actual labels from the dataset (spam/ham)\n",
+    "\n",
+    "# Loop through each message and its corresponding label in the dataset\n",
+    "for message, label in zip(df['Email_Messages'], df['Label']):\n",
+    "    # Calculate the posterior probabilities for both spam and non-spam using the trained model\n",
+    "    # 'spam_words', 'non_spam_words', 'total_spam_words', 'total_non_spam_words', 'len_unique_words' \n",
+    "    # are all parameters learned from the training data.\n",
     "    spam_posterior, non_spam_posterior = calculate_posterior_probability(\n",
     "        message, spam_words, non_spam_words, total_spam_words, total_non_spam_words, \n",
     "        len_unique_words, probability_of_spam_msgs, probability_of_non_spam_msgs\n",
     "    )\n",
     "    \n",
-    "    # Classify the message\n",
+    "    # Classify the message as spam if the posterior probability for spam is higher\n",
     "    if spam_posterior > non_spam_posterior:\n",
-    "        prediction = 'spam'\n",
+    "        predictions.append('spam')  # If the message is more likely to be spam, append 'spam'\n",
     "    else:\n",
-    "        prediction = 'ham'\n",
-    "    \n",
-    "    # Check if the prediction matches the actual label\n",
-    "    if prediction == label:\n",
-    "        # If the prediction is correct, increment the count of correct predictions\n",
-    "        correct_predictions += 1\n",
+    "        predictions.append('ham')  # Otherwise, append 'ham' (non-spam)\n",
     "\n",
-    "print('Total messages:', len(df))\n",
-    "print('Correct predictions:', correct_predictions)\n",
+    "# Calculate the confusion matrix to evaluate the performance of the classifier\n",
+    "# The confusion matrix will compare the actual labels vs predicted labels\n",
+    "conf_matrix = confusion_matrix(actual_labels, predictions, labels=['spam', 'ham'])\n",
+    "print(\"Confusion Matrix:\\n\", conf_matrix)\n",
     "\n",
-    "# Calculate the accuracy of the model\n",
-    "accuracy = correct_predictions / len(df)\n",
-    "print('Accuracy:', accuracy)\n"
+    "# Calculate precision, recall, and F1-score for the spam class\n",
+    "# These metrics help evaluate the classifier's performance for identifying spam messages\n",
+    "precision = precision_score(actual_labels, predictions, pos_label='spam') \n",
+    "recall = recall_score(actual_labels, predictions, pos_label='spam')  \n",
+    "f1 = f1_score(actual_labels, predictions, pos_label='spam')  \n",
+    "\n",
+    "# Print evaluation metrics to assess model performance\n",
+    "print(\"Total messages:\", len(df))  # Print the total number of messages in the dataset\n",
+    "print(\"Accuracy:\", sum(1 for p, l in zip(predictions, actual_labels) if p == l) / len(df))  # Accuracy: Percentage of correctly classified messages\n",
+    "print(\"Precision:\", precision)  # Precision: Proportion of true positive spam out of predicted spam\n",
+    "print(\"Recall:\", recall)  # Recall: Proportion of true positive spam out of all actual spam\n",
+    "print(\"F1-Score:\", f1)  # F1-Score: Harmonic mean of precision and recall\n"
    ]
   }
  ],
